<resources>
    <string name="app_name">VictusClient Mob</string>
    <string name="tab_theme">Theme</string>
    <string name="theme_editor">Theme editor</string>
    <string name="theme_preset">Preset</string>
    <string name="theme_accent">Accent color</string>
    <string name="theme_background">Background</string>
    <string name="theme_surface">Surface</string>
    <string name="theme_text">Text</string>
    <string name="theme_corner">Corner radius</string>
    <string name="theme_dark">Dark mode</string>
    <string name="theme_custom_hex">Custom hex</string>
    <string name="theme_reset">Reset to default</string>
    <string name="tab_home">Home</string>
    <string name="tab_accounts">Accounts</string>
    <string name="tab_install">Install</string>
    <string name="tab_skins">Skins</string>
    <string name="tab_settings">Settings</string>
    <string name="play">Play</string>
    <string name="offline_login">Offline account</string>
    <string name="ms_login">Microsoft account</string>
    <string name="username_hint">Username</string>
    <string name="add_account">Add account</string>
    <string name="install_vanilla">Vanilla version</string>
    <string name="install_mod">Mods</string>
    <string name="install_shader">Shaders</string>
    <string name="install_resourcepack">Resource packs</string>
    <string name="install_modpack">Modpacks</string>
    <string name="search_hint">Search…</string>
    <string name="download">Download</string>
    <string name="import_apk">Install APK</string>
    <string name="skin_upload">Upload skin</string>
    <string name="delete">Delete</string>
    <string name="memory">Memory (MB)</string>
    <string name="jvm_args">JVM arguments</string>
    <string name="renderer">Renderer</string>
</resources>
